fixed page scrolling issue on dashboard and reduced size of timer buttons on timer page to display better on smaller screens

--- a/focus-app/src/CSSFolders/Footer.css
+++ b/focus-app/src/CSSFolders/Footer.css
@@ -8,10 +8,14 @@
   justify-content: center;
   height: 40px;
   width: 100%;
-  padding: 0;
+  padding: 5px, 0;
   margin-top: 3%;
   flex-shrink: 0;
   box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.2);
+  color: black;
+  text-align: center;
+  position:absolute;
+  bottom: 0;
 }
 
 .footer .about,
